# stonks

./: .dockerignore  .gitignore  Pipfile  README.md  Untitled.ipynb  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
allegro-sdk/: .gitignore  Pipfile  token.json
device-recognizer/: Notebook.ipynb  Pipfile  README.md  Untitled1.ipynb  config.cfg  dataset1.json  pyproject.toml  setup.cfg
device-recognizer-3/: Notebook.ipynb  base_config.cfg  config.cfg  functions.py
device-recognizer-api/: Dockerfile  Pipfile  docker-compose.yml  schemas.py
device-recognizer/datasets/: dataset1.jsonl  offers_dataset2.jsonl  test.json  train.json
device-recognizer/datasets/old/: dataset_clicked_2.jsonl  offers.txt
docker/: backend.Dockerfile  backend.dev.Dockerfile  device-recognizer-api.prod.Dockerfile  stonks-api.dev.Dockerfile  stonks-api.prod.Dockerfile  stonks-scraper.Dockerfile  stonks-watcher.prod.Dockerfile
docs/: docusaurus.config.js
libs/olx-sdk/: asd.py  setup.cfg
libs/olx-sdk/olx_sdk/: Olx.py  __init__.py  models.py
olx-sdk/: LICENSE.md
scripts/: log-api.sh  migrate.sh  start.api.sh  start.crud.sh  start.dev.api.sh  start.dev.crud.sh  start.dev.worker.sh  start.worker.sh
stonks-api/: Dockerfile  Pipfile  logger.py  main.py  prod.Dockerfile
stonks-scraper/: Dockerfile  Pipfile  crontab  dev.Dockerfile  dev.crud.Dockerfile  scrapy.cfg  start.sh
stonks-types/: setup.cfg
stonks-types/stonks_types/schemas/: __init__.py  device_recognizer.py  devices.py  fee.py  offer.py  stonks.py
stonks-watcher/: Pipfile  apis.py  celeryapp.py  (+9 more)
(+221 files in other folders)
