[metadata]
name = device-recognizer
version = 0.0.1
description = Named Entity Recognizer that extracts information about devices.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = spacy, ml, ner, device
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    spacy
    pydantic
