[metadata]
name = stonks-types
version = 0.0.1
description = Types for stonks backend.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pydantic
