[metadata]
name = olx-sdk
version = 0.0.1
description = SDK that utilizes OLX API and web scraping to extract data.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = olx, api, sdk, scraping
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests
